# prep-forge

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PRODUCT.md  README.md  ROADMAP.md  RODEMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ConfirmButton.tsx  MathBlock.test.ts  MathBlock.tsx  PrepButtons.tsx  StepContent.tsx  mathRender.ts  ui.tsx
apps/web/lib/: admin.ts  confirm-actions.ts  fixture.ts  integration.db.test.ts  loop-e2e.db.test.ts  merge.test.ts  merge.ts  packets.ts  practice-actions.ts  practice.ts  prep-e2e.db.test.ts  prep-gates.test.ts  prep-permissions.db.test.ts  prep.db.test.ts  prep.ts  sampleLessonPacket.ts  seed.ts  types.ts
infra/: docker-compose.yml
openspec/: config.yaml
scripts/: import_legacy_ai_teacher.ts
services/ai-worker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/ai-worker/ai_worker/: config.py  db.py  generate.py  main.py  model_gateway.py
services/ai-worker/ai_worker/adapters/: __init__.py  claude_cli.py  fake.py
services/ai-worker/ai_worker/contracts/: __init__.py  generation_source.py  model_call.py  prep_generate_request.py  prep_generate_result.py  prep_job_record.py  quality_gate_result.py
services/ai-worker/scripts/: gen_contracts.py
services/ai-worker/tests/: test_auth.py  test_claude_cli.py  test_e2e_db.py  test_generate.py  test_model_gateway.py
(+31 files in other folders)
